@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Make the PromptIfStale plugin skip all inc::* packages that live in the inc/
+  dir.
+
+
 1.06     2020-03-14
 
 - Allow an existing COPYRIGHT section to override the section generated by
